fixing credential issues

--- a/t1.ipynb
+++ b/t1.ipynb
@@ -19,10 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fixing the user issue\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"fixing the user issue\")"
+   ]
   }
  ],
  "metadata": {
